--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZipKode</title>
+  <title>LoveProperty Legacy</title>
 </head>
 
 <body>
