--- a/src/scss/layout/svg.scss
+++ b/src/scss/layout/svg.scss
@@ -4,3 +4,11 @@
   fill: #141A33;
   transition: get('transition');
 }
+
+.mail-icon,
+.file-minus-icon,
+.figma-icon {
+  fill: none;
+  width: 15px;
+  height: 15px;
+}
