--- a/src/scss/config/variables.scss
+++ b/src/scss/config/variables.scss
@@ -10,6 +10,8 @@ $smallscreen: 576px;
 
 :root {
   --font-p: 'Open Sans', 'system', sans-serif;
+  --neutral-100: #F5F7FF;
+  --neutral-200: #CCD0E9;
   --desktop: 712px;
   --laptop: 648px;
   --tablet: 600px;
