--- a/src/scss/layout/legacy.scss
+++ b/src/scss/layout/legacy.scss
@@ -26,13 +26,19 @@
 
 .links {
   padding: 0;
+  margin: 10px 0 0;
   list-style: none;
+
 
   li {
     a {
-      font: 400 normal rem(13px) / 1.4 var(--font-p);
-      color: #0E61AE;
-      text-decoration: underline;
+      text-decoration: none;
+
+      .label {
+        font: 400 normal rem(13px) / 1.4 var(--font-p);
+        color: #0E61AE;
+        text-decoration: underline;
+      }
     }
   }
 }
