--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LoveProperty Legacy</title>
+  <title>Love Property: A Look Back at Our Story</title>
+  <meta name="description"
+    content="Delve into Love Property's history, from our start as Realli to our time as a property curation platform. Browse our product milestones, social media memories, and learn about the team's efforts along the way.">
+  <style>
+    /**
+    * Reinstate scrolling for non-JS clients
+    */
+    .simplebar-content-wrapper {
+      scrollbar-width: auto;
+      -ms-overflow-style: auto;
+    }
+
+    .simplebar-content-wrapper::-webkit-scrollbar,
+    .simplebar-hide-scrollbar::-webkit-scrollbar {
+      display: initial;
+      width: initial;
+      height: initial;
+    }
+  </style>
 </head>
 
 <body>
@@ -29,8 +47,8 @@
                 it needed to be sustainable.</p>
               <p>While succeeding in one goal, we couldn’t make the other.</p>
               <p>Thank you to everyone who has been a part of our journey.</p>
+              <%= _.template(require('./../includes/partners.html').default)() %>
             </section>
-            <h1>Slider 1</h1>
 
             <section class="title">
               <h2>Info</h2>
@@ -59,7 +77,7 @@
 
               <%= _.template(require('./../includes/explore.html').default)() %>
             </section>
-            
+
 
             <section class="content">
               <h2>Our Product</h2>
