--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@ $container-max-widths: (
 // ui
 @import './ui/typography';
 @import './ui/category-card';
+@import './ui/partner-card';
 @import './ui/simplebar';
 // layout
 @import './layout/global';
