--- a/public/views/index.html
+++ b/public/views/index.html
@@ -46,15 +46,12 @@
             <section class="legacy-video">
             </section>
             <section class="legacy-message">
-              <p>So long, farewell. After making great strides over the past few years, we have made the difficult
-                decision
-                to
-                close our doors.</p>
-              <p>We are incredibly proud of what we built. We’ll miss using it ourselves.</p>
+              <h1>So long, farewell.</h1>
+              <p>After making great strides over the past few years, we have made the difficult decision to close our
+                doors.</p>
+              <p>We are incredibly proud of what we built and miss using it ourselves.</p>
               <p>Although we designed a business that customers absolutely love, it proved hard to scale into the
-                profitability
-                it needed to be sustainable.</p>
-              <p>While succeeding in one goal, we couldn’t make the other.</p>
+                profitability it needed to be sustainable.</p>
               <p>Thank you to everyone who has been a part of our journey.</p>
               <%= _.template(require('./../includes/partners.html').default)() %>
             </section>
@@ -79,10 +76,32 @@
             </section>
 
             <section class="content">
+              <h2>Our highlights</h2>
+              <ul>
+                <li>💰 Successfully raised €1.2m in funding, including Enterprise Ireland HPSU status.</li>
+                <li>📈 Grew our user base to over 200,000 property enthusiasts.</li>
+                <li>👩‍💼 Worked with a diverse clientele, from small agencies to large, complex enterprise advertising
+                  clients.</li>
+                <li>🌟 Built a brilliant team both in-house and remotely.</li>
+              </ul>
+            </section>
+
+            <section class="content">
+              <h2>What we did</h2>
+              <ul>
+                <li>✅ Provided an easy-to-use platform for property listings, connecting buyers and sellers seamlessly.
+                </li>
+                <li>✅ Developed SaaS tools for property professionals.</li>
+                <li>✅ Offered a comprehensive suite of digital marketing services, including social media, SEO, and
+                  content
+                  marketing.</li>
+              </ul>
+            </section>
+
+            <section class="content">
               <h2>Instagram Links</h2>
               <p>Although our website is no longer available, Love Property lives on through our old Instagram accounts.
-              </p>
-              <p>You can explore a selection below.</p>
+                Please see a sample below.</p>
 
               <%= _.template(require('./../includes/explore.html').default)() %>
             </section>
@@ -90,10 +109,10 @@
 
             <section class="content">
               <h2>Our Product</h2>
-              <p>As a product-focused team, we were always committed to pushing the boundaries of user experience and
-                design.
-              </p>
-              <p>You can view the last iteration of our product, documented on Figma by clicking the link below.</p>
+              <p>As a product-focused team, we were always committed to pushing the boundaries in terms of user
+                experience and design.</p>
+
+              <p>We’ve archived the last version of our product on Figma.</p>
               <ul class="links">
                 <li>
                   <a href="https://tinyurl.com/jhs3ayn2">
@@ -110,10 +129,8 @@
 
             <section class="content">
               <h2>In The News</h2>
-              <p>As a small company, it was always exciting for us to receive media coverage. We have included links
-                below
-                to
-                some of our favorite press features.</p>
+              <p>As a small company, being in the news was always exciting. We have included links below to some of our
+                favorite press features.</p>
               <ul class="links">
                 <li><a href="https://tinyurl.com/2szzymfp">
                     <span class="icon">
@@ -145,8 +162,7 @@
             <section class="content">
               <h2>Contact Us</h2>
               <p>If you would like to learn more about Realli/Love Property or are interested in freelance projects, we
-                are
-                available to connect with you. Please don't hesitate to reach out to us.</p>
+                are available to connect with you. Please don't hesitate to reach out to us.</p>
               <ul class="links">
                 <li><a href="mailto:lovepropertycontact@gmail.com">
                     <span class="icon">
