--- a/src/scss/ui/simplebar.scss
+++ b/src/scss/ui/simplebar.scss
@@ -25,7 +25,7 @@
     background-color: red;
 
     &:before {
-      background-color: var(--neutral-200);
+      background-color: #BABCCA;
       opacity: 1;
       top: 0;
       left: 0;
@@ -39,7 +39,7 @@
   &:after {
     content: "";
     display: block;
-    background-color: var(--neutral-100);
+    background-color: #EBEBF5;
     height: 8px;
     width: 500vw;
     margin-left: -200vw;
