--- a/public/views/index.html
+++ b/public/views/index.html
@@ -65,7 +65,7 @@
             </section>
 
             <section class="content" id="our-highlights">
-              <h2>Our highlights</h2>
+              <h2>Our Highlights</h2>
               <ul>
                 <li>
                   <span class="icon">💰</span>
@@ -91,7 +91,7 @@
 
           <section class="content" id="what-we-did">
             <div class="container">
-              <h2>What we did</h2>
+              <h2>What We Did</h2>
               <ul>
                 <li>
                   <span class="icon">✅</span>Provided an easy-to-use platform for property listings, connecting buyers
